# excalidraw-dsl

./: .gitignore  .gitmodules  CLI_EXAMPLES.md  Cargo.toml  INTEGRATION.md  Makefile  README-zh.md  README.md  _typos.toml  cliff.toml  deny.toml  groups-demo.excalidraw  groups-simple.excalidraw  integration-test.sh  start-backend.sh  test-integration.sh
benches/: compilation.rs  layout.rs  parsing.rs
docs/: CLI_EXAMPLES.md  IMPROVEMENTS.md  ML_LAYOUT_PHASE1_SUMMARY.md  ML_LAYOUT_TESTING.md  ML_TRAINING_GUIDE_M4.md  QUALITY_REPORT.md  language-reference-zh.md  language-reference.md
examples/: README.md  advanced-connections.edsl  basic-flow-dagre.edsl  basic-flow-no-cycle.edsl  basic-flow.edsl  cloud-native-platform.edsl  complex-dag.edsl  component-types-simple.edsl  component-types.edsl  container-connections-test.edsl  decision-tree.edsl  devops-pipeline.edsl  distributed-data-platform.edsl  edge-chains.edsl  edge-connection-test.edsl  event-driven-ecommerce.edsl  groups-demo.edsl  groups-simple.edsl  improved-layout-test.edsl  improvements_demo.rs  layout_comparison_dagre.edsl  layout_comparison_elk.edsl  layout_comparison_test.edsl  microservices-architecture.edsl  microservices-simple.edsl  microservices-template.edsl  microservices_ml.edsl  ml_enhanced_layout.rs  ml_layout_demo.rs  nested-containers.edsl  neural_network_ml.edsl  observability-stack.edsl  pingora-architecture.edsl  routing-demo.edsl  routing-showcase.edsl  simple-nodes.edsl  simple.edsl  simple_ml_test.edsl  state-machine-simple.edsl  system-architecture.edsl  (+1 more)
scripts/: README.md  train.sh
specs/: 0001-spec.md  0002-design.md  0003-edsl-improvement.md  0004-ml-layout.md  0005-ml-layout-phase3.md
src/: ast.rs  edsl.pest  error.rs  fluent.rs  generator.rs  generator_test.rs  igr.rs  integration_tests.rs  layout.rs  lib.rs  llm.rs  main.rs  parser.rs  presets.rs  routing.rs  server.rs  template.rs
src/layout/: cache.rs  dagre.rs  elk.rs  force.rs  manager.rs  mod.rs  strategy.rs
src/layout/ml/: README.md  constraints.rs  direct.rs  enhanced.rs  features.rs  feedback.rs  gnn.rs  mod.rs  model.rs  phase2_tests.rs  rl.rs  selector.rs  tests.rs  training.rs
src/server/: http.rs  mod.rs  rate_limit.rs  websocket.rs
src/tests/: error_tests.rs  igr_tests.rs  mod.rs
src/training/: config.rs  constraints.rs  data.rs  enhanced.rs  gnn.rs  mod.rs  rl.rs  utils.rs
tests/: basic.rs  comprehensive.rs  edge_chains.rs  elk_layout.rs  integration_tests.rs  llm_optimization.rs  nested_structures.rs  routing.rs  simple.rs  simple_integration_test.rs  template_support.rs  text_color.rs
tutorial/: README-en.md  README-zh.md  README.md
tutorial/examples/: 01-basic.edsl  02-containers.edsl  03-styling.edsl  04-microservices.edsl  05-groups.edsl  06-edge-chains.edsl  07-complex-system.edsl  08-text-colors.edsl  README.md
ui/: DEMO.md  README.md  index.html  package.json
ui/src/: App.tsx
ui/src/components/: EdslEditor.tsx  ExcalidrawPreview.tsx  FileManager.tsx  SettingsPanel.tsx
ui/src/components/ui/: dialog.tsx
ui/src/services/: edsl-compiler.ts  file-service.ts
ui/src/store/: edsl-store.ts
ui/src/types/: edsl.ts  global.d.ts
