[package]
name = "excalidraw-dsl"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A domain-specific language for generating Excalidraw diagrams"
license = "MIT"
repository = "https://github.com/yourusername/excalidraw-dsl"
keywords = ["excalidraw", "dsl", "diagrams", "visualization"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "edsl"
path = "src/main.rs"

[lib]
name = "excalidraw_dsl"
path = "src/lib.rs"

[dependencies]
# Core parsing
pest = "2.7"
pest_derive = "2.7"

# Graph processing
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# HTTP client for LLM integration
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = ["llm"]
llm = ["reqwest", "tokio"]

# Future layout engine integration
# Note: @antv/layout-rust is not available yet, so we'll implement a basic Dagre-like algorithm
# antv-layout = { version = "0.1", optional = true }
